--- a/app/app.css
+++ b/app/app.css
@@ -18,6 +18,11 @@
   z-index: 2;
 }
 
+.wrapper form {
+  position: relative;
+  z-index: 2;
+}
+
 .wrapper:before {
   content: ' ';
   display: block;
