--- a/app/components/Header/header.template.html
+++ b/app/components/Header/header.template.html
@@ -1,4 +1,4 @@
-<header class="navbar">
+<header class="navbar has-background-danger-dark">
     <div class="container">
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
